Apple-Search.html

--- a/Apple-Search.html
+++ b/Apple-Search.html
@@ -1,36 +1,29 @@
 <div class="apple-search-container">
   <div class="apple-search-box">
-    <!-- Icona Apple Search cliccabile -->
     <svg class="apple-search-icon" viewBox="0 0 24 24" width="20" height="20" aria-hidden="true">
       <circle cx="10" cy="10" r="7" stroke="white" stroke-width="1.5" fill="none"></circle>
       <line x1="15" y1="15" x2="20" y2="20" stroke="white" stroke-width="1.5"></line>
     </svg>
-    <input type="text" class="apple-search-input" placeholder="Cerca su andreaingrassia.webflow.io" />
+    <input type="text" class="apple-search-input" placeholder="Cerca nel sito" />
   </div>
   <div class="apple-search-results">
     <p class="results-title">Link rapidi</p>
     <ul class="results-list">
-      <li><a href="/it/home">➜ Home</a></li>
-      <li><a href="/it/portfolio">➜ Portfolio</a></li>
-      <li><a href="/it/servizi">➜ Servizi</a></li>
-      <li><a href="/it-it/contatti#social">➜ Social</a></li>
-      <li><a href="/it-it/contatti">➜ Contatti</a></li>
-      <li><a href="/it/informazioni/aggiornamenti">➜ Informazioni</a></li>
+      <li><a href="./it/home">➜ Home</a></li>
+      <li><a href="./it/portfolio">➜ Portfolio</a></li>
+      <li><a href="./it/servizi">➜ Servizi</a></li>
+      <li><a href="./it-it/contatti#social">➜ Social</a></li>
+      <li><a href="./it-it/contatti">➜ Contatti</a></li>
+      <li><a href="./it/informazioni/aggiornamenti">➜ Informazioni</a></li>
     </ul>
     <p class="no-results" style="display: none;">Nessun risultato trovato.</p>
   </div>
 </div>
 
 <style>
-  /* Font SF Pro */
-  @font-face {
-    font-family: "SF Pro Display";
-    src: url("https://cdn.apple.com/sf-pro/SF-Pro-Display-Regular.woff2") format("woff2");
-  }
-
   body {
     background-color: #121212;
-    font-family: "SF Pro Display", -apple-system, BlinkMacSystemFont, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
   }
 
   .apple-search-container {
@@ -46,11 +39,6 @@
     align-items: center;
     border-bottom: 1px solid rgba(255, 255, 255, 0.4);
     padding: 12px 0;
-    transition: border-color 0.3s ease;
-  }
-
-  .apple-search-box:focus-within {
-    border-color: white;
   }
 
   .apple-search-icon {
@@ -58,7 +46,6 @@
     height: 20px;
     margin-right: 10px;
     opacity: 0.8;
-    transition: opacity 0.3s ease;
     cursor: pointer;
   }
 
@@ -71,62 +58,48 @@
     outline: none;
   }
 
-  .apple-search-input::placeholder {
-    color: rgba(255, 255, 255, 0.5);
-  }
-
   .apple-search-results {
     display: none;
     background: rgba(255, 255, 255, 0.1);
     padding: 10px;
     border-radius: 10px;
     margin-top: 8px;
-    backdrop-filter: blur(10px);
-    animation: fadeIn 0.3s ease-in-out;
-  }
-
-  .results-title {
-    font-size: 14px;
-    color: rgba(255, 255, 255, 0.7);
-    margin-bottom: 6px;
-  }
-
-  .results-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  .results-list li {
-    margin: 5px 0;
-  }
-
-  .results-list a {
-    text-decoration: none;
-    color: white;
-    font-size: 14px;
-    opacity: 0.8;
-    transition: opacity 0.3s;
-  }
-
-  .results-list a:hover {
-    opacity: 1;
-  }
-
-  .no-results {
-    color: rgba(255, 255, 255, 0.7);
-    font-size: 14px;
-    margin-top: 8px;
-  }
-
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-      transform: translateY(-5px);
-    }
-    to {
-      opacity: 1;
-      transform: translateY(0);
-    }
   }
 </style>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const searchInput = document.querySelector(".apple-search-input");
+    const searchResults = document.querySelector(".apple-search-results");
+    const noResultsMessage = document.querySelector(".no-results");
+    const searchIcon = document.querySelector(".apple-search-icon");
+
+    const urlMap = {
+      "home": "./it/home",
+      "portfolio": "./it/portfolio",
+      "servizi": "./it/servizi",
+      "social": "./it-it/contatti#social",
+      "contatti": "./it-it/contatti",
+      "informazioni": "./it/informazioni/aggiornamenti"
+    };
+
+    function performSearch(event) {
+      const query = searchInput.value.toLowerCase().trim();
+      if (urlMap[query] && (event.key === "Enter" || event.type === "click")) {
+        window.location.href = urlMap[query];
+      } else {
+        searchResults.style.display = query.length > 0 ? "block" : "none";
+        noResultsMessage.style.display = query.length > 0 && !urlMap[query] ? "block" : "none";
+      }
+    }
+
+    searchInput.addEventListener("input", performSearch);
+    searchInput.addEventListener("keydown", function (e) {
+      if (e.key === "Enter") {
+        e.preventDefault();
+        performSearch(e);
+      }
+    });
+    searchIcon.addEventListener("click", performSearch);
+  });
+</script>
