Apple-Search.html

--- a/Apple-Search.html
+++ b/Apple-Search.html
@@ -28,3 +28,7 @@
     <p class="no-results" style="display: none;">Nessun risultato trovato.</p>
   </div>
 </div>
+
+<!-- Collegamento al CSS e al JS esterno -->
+<link rel="stylesheet" href="https://andreaingrassia.netlify.app/apple-search.css">
+<script src="https://andreaingrassia.netlify.app/apple-search.js"></script>
