Apple-Search.html

--- a/Apple-Search.html
+++ b/Apple-Search.html
@@ -1,30 +1,33 @@
-<div class="apple-search-container">
-  <div class="apple-search-box">
-    <!-- Icona Apple Search cliccabile -->
-    <svg class="apple-search-icon" viewBox="0 0 24 24" width="20" height="20" aria-hidden="true">
-      <circle cx="10" cy="10" r="7" stroke="white" stroke-width="1.5" fill="none"></circle>
-      <line x1="15" y1="15" x2="20" y2="20" stroke="white" stroke-width="1.5"></line>
-    </svg>
-    <input type="text" class="apple-search-input" placeholder="Cerca su andreaingrassia.webflow.io" />
-    <svg class="apple-search-clear" viewBox="0 0 24 24" width="16" height="16" aria-hidden="true">
-      <line x1="6" y1="6" x2="18" y2="18" stroke="white" stroke-width="2"></line>
-      <line x1="6" y1="18" x2="18" y2="6" stroke="white" stroke-width="2"></line>
-    </svg>
-  </div>
-  <div class="apple-search-results">
-    <p class="results-title" id="link-rapidi-title">Link rapidi</p>
-    <ul class="results-list">
-      <li><a href="/it/home#faq">➜ FAQ</a></li>
-      <li><a href="/it-it/contatti#modulo">➜ Modulo Contatti</a></li>
-      <li><a href="/it/home#bio">➜ Biografia</a></li>
-      <li><a href="/it/portfolio#galleria">➜ Galleria</a></li>
-      <li><a href="/it/servizi#attrezzatura">➜ Attrezzatura</a></li>
-      <li><a href="/it/informazioni/aggiornamenti">➜ Aggiornamenti</a></li>
-    </ul>
-    <p class="results-title" id="suggestions-title" style="display: none;">Suggerimenti</p>
-    <ul class="suggestions-list">
-      <!-- I suggerimenti verranno popolati dinamicamente tramite JS -->
-    </ul>
-    <p class="no-results" style="display: none;">Nessun risultato trovato.</p>
-  </div>
-</div>
+<pre>
+&lt;div class=&quot;apple-search-container&quot;&gt;
+  &lt;div class=&quot;apple-search-box&quot;&gt;
+    &lt;!-- Icona Apple Search cliccabile --&gt;
+    &lt;svg class=&quot;apple-search-icon&quot; viewBox=&quot;0 0 24 24&quot; width=&quot;20&quot; height=&quot;20&quot; aria-hidden=&quot;true&quot;&gt;
+      &lt;circle cx=&quot;10&quot; cy=&quot;10&quot; r=&quot;7&quot; stroke=&quot;white&quot; stroke-width=&quot;1.5&quot; fill=&quot;none&quot;&gt;&lt;/circle&gt;
+      &lt;line x1=&quot;15&quot; y1=&quot;15&quot; x2=&quot;20&quot; y2=&quot;20&quot; stroke=&quot;white&quot; stroke-width=&quot;1.5&quot;&gt;&lt;/line&gt;
+    &lt;/svg&gt;
+    &lt;input type=&quot;text&quot; class=&quot;apple-search-input&quot; placeholder=&quot;Cerca su andreaingrassia.webflow.io&quot; /&gt;
+    &lt;svg class=&quot;apple-search-clear&quot; viewBox=&quot;0 0 24 24&quot; width=&quot;16&quot; height=&quot;16&quot; aria-hidden=&quot;true&quot;&gt;
+      &lt;line x1=&quot;6&quot; y1=&quot;6&quot; x2=&quot;18&quot; y2=&quot;18&quot; stroke=&quot;white&quot; stroke-width=&quot;2&quot;&gt;&lt;/line&gt;
+      &lt;line x1=&quot;6&quot; y1=&quot;18&quot; x2=&quot;18&quot; y2=&quot;6&quot; stroke=&quot;white&quot; stroke-width=&quot;2&quot;&gt;&lt;/line&gt;
+    &lt;/svg&gt;
+  &lt;/div&gt;
+  &lt;div class=&quot;apple-search-results&quot;&gt;
+    &lt;p class=&quot;results-title&quot; id=&quot;link-rapidi-title&quot;&gt;Link rapidi&lt;/p&gt;
+    &lt;ul class=&quot;results-list&quot;&gt;
+      &lt;li&gt;&lt;a href=&quot;/it/home#faq&quot;&gt;&amp;#8594; FAQ&lt;/a&gt;&lt;/li&gt;
+      &lt;li&gt;&lt;a href=&quot;/it-it/contatti#modulo&quot;&gt;&amp;#8594; Modulo Contatti&lt;/a&gt;&lt;/li&gt;
+      &lt;li&gt;&lt;a href=&quot;/it/home#bio&quot;&gt;&amp;#8594; Biografia&lt;/a&gt;&lt;/li&gt;
+      &lt;li&gt;&lt;a href=&quot;/it/portfolio#galleria&quot;&gt;&amp;#8594; Galleria&lt;/a&gt;&lt;/li&gt;
+      &lt;li&gt;&lt;a href=&quot;/it/servizi#attrezzatura&quot;&gt;&amp;#8594; Attrezzatura&lt;/a&gt;&lt;/li&gt;
+      &lt;li&gt;&lt;a href=&quot;/it/informazioni/aggiornamenti&quot;&gt;&amp;#8594; Aggiornamenti&lt;/a&gt;&lt;/li&gt;
+    &lt;/ul&gt;
+    &lt;p class=&quot;results-title&quot; id=&quot;suggestions-title&quot; style=&quot;display: none;&quot;&gt;Suggerimenti&lt;/p&gt;
+    &lt;ul class=&quot;suggestions-list&quot;&gt;
+      &lt;!-- I suggerimenti verranno popolati dinamicamente tramite JS --&gt;
+    &lt;/ul&gt;
+    &lt;p class=&quot;no-results&quot; style=&quot;display: none;&quot;&gt;Nessun risultato trovato.&lt;/p&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
+</pre>
+
