--- a/it-it/index.html
+++ b/it-it/index.html
@@ -1,3 +1,14 @@
 <!DOCTYPE html>
-<link rel="icon" href="/it-it/favicon.ico">
+<html lang="it">
+<head>
+  <meta charset="UTF-8">
+  <title>Documento</title>
+  <link rel="icon" href="/it-it/favicon.ico">
+</head>
+<body style="margin:0">
+  <iframe 
+    src="nomedocumento.pdf" 
+    style="width:100vw; height:100vh; border:none;">
+  </iframe>
+</body>
 </html>
